fixed spacing issue

--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -139,6 +139,8 @@ page-dashboard {
     }
     
    
-    
+    .card-content ion-item.item-block {
+        min-height: 2rem;
+    }
 }
 
